# lib/models/user.model.js
@@ -23,6 +23,7 @@ const userSchema = new mongoose.Schema(
     lastStripeEventId: { type: String },
     processedStripeEventIds: { type: [String], default: [] },
     reminderEmailsEnabled: { type: Boolean, default: true },
+    targetHourlyRate: { type: Number, default: null, min: 0 },
     emailVerified: { type: Boolean, default: false },
     emailVerificationToken: { type: String },
     emailVerificationExpiresAt: { type: Date },
@@ -120,6 +121,8 @@ module.exports = {
       { $set: { reminderEmailsEnabled } },
       { returnDocument: 'after' },
     ),
+  updateTargetHourlyRateAndReturn: (id, targetHourlyRate) =>
+    User.findOneAndUpdate({ _id: id }, { $set: { targetHourlyRate } }, { returnDocument: 'after' }),
   findAllForReminderDigest: () =>
     User.find({ emailVerified: true, reminderEmailsEnabled: { $ne: false } }),
   linkGoogleId: (userId, googleId) =>
